--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
     "sanity": "^5.7.0",
     "tailwind-merge": "^3.4.0"
   },
+  "overrides": {
+    "minimatch": "^10.2.1",
+    "markdown-it": "^14.1.1",
+    "undici": "^6.23.0"
+  },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
