--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-intl": "^4.8.3",
     "next-sanity": "^12.0.16",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
